css/layout.css
/* ... */
header a {
  color: #fff;
}

@media (min-width: 992px) {
  header .navbar-main {
    padding-bottom: 0;
    position: absolute;
    bottom: -6px;
    right: 0;
    z-index: 9;
  }
  header .navbar-main li.active {
    border-bottom: 5px solid #ebeef0;
  }
}

@media (min-width: 768px) {
  header .container, header #cookie_container .cookie_inner, #cookie_container header .cookie_inner {
    padding: 0;
  }
}

header .bottom-bar {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  border-bottom: 7px solid #ced4da;
}

/***************************************
    BODY STYLES
****************************************/
.main {
  background-color: #e9ecef;
}

.main.full-background {
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.main:not(.no-pad-top) .container, .main:not(.no-pad-top) #cookie_container .cookie_inner, #cookie_container .main:not(.no-pad-top) .cookie_inner {
  padding-top: 15px;
}

.main .container, .main #cookie_container .cookie_inner, #cookie_container .main .cookie_inner {
  background: #fff;
  padding-bottom: 15px;
}

.main .banner-image {
  margin-bottom: 30px;
}

.main .secondary .nav-pills .nav {
  padding: 7.5px;
}

.main .secondary .nav-pills .nav .active {
  background: transparent;
  color: #868e96;
}

.main .secondary .nav-pills .active {
  border-radius: 0;
}

/***************************************
    FOOTER STYLES
****************************************/
footer {
  background: #ced4da;
  padding-top: 15px;
  padding-bottom: 15px;
  color: #343a40;
  font-size: 0.9rem;
}

footer .container, footer #cookie_container .cookie_inner, #cookie_container footer .cookie_inner {
  padding: 0;
}

footer a {
  color: #343a40;
}

footer a.active {
  color: rgba(52, 58, 64, 0.5);
}

footer .row {
  margin-bottom: 15px;
}

/***************************************
    MISC STYLES
****************************************/
.map-row {
  width: calc(100% + 30px);
  min-width: 100%;
  display: block;
}

.embed-responsive {
  margin-bottom: 30px;
}

.embed-responsive.embed-responsive-map {
  padding-bottom: 300px;
}

#WidgetHolder,
nav.secondary {
  margin-bottom: 30px;
}

.gallery-modal {
  z-index: 9999 !important;
}

/***************************************
    PAGE STYLES
****************************************/
/** HomePage **/
.HomePage .main h1, .HomePage .main h2,
.HomePage .main .h1, .HomePage .main .h2 {
  margin-bottom: 30px;
  border-bottom: none;
}

.HomePage .main h1 span, .HomePage .main h2 span,
.HomePage .main .h1 span, .HomePage .main .h2 span {
  display: inline-block;
  padding: 0 15px 15px;
  border-bottom: 1px solid #e9ecef;
}

.HomePage .section {
  margin: 30px 0;
}
/*# sourceMappingURL=layout.css.map */

